fix: add truncate text with elipsis

--- a/src/components/navigation/navigation-item/NavigationItem.scss
+++ b/src/components/navigation/navigation-item/NavigationItem.scss
@@ -70,5 +70,8 @@
     &__label {
         @include text-body-s--regular;
         justify-self: start;
+        text-overflow: ellipsis;
+        overflow: hidden;
+        max-width: 100%;
     }
 }
